src/objects/Timesheet__c.object
<CustomObject>
    <fields>
        <fullName>Tuesday_Time_In__c</fullName>
        <label>Tuesday Time In</label>
        <picklist>
            <picklistValues>
                <fullName>08:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tuesday_Time_Out__c</fullName>
        <label>Tuesday Time Out</label>
        <picklist>
            <controllingField>Tuesday_Time_In__c</controllingField>
            <picklistValues>
                <fullName>12:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21:30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Wednesday_Hours_worked__c</fullName>
        <formula>blankvalue(if (ispickval( Wednesday_Time_In__c , &quot;BH&quot;),7.5,((value(left(text( Wednesday_Time_Out__c ),2))*60 + value(right(text(Wednesday_Time_Out__c),2))) - (value(left(text( Wednesday_Time_In__c ),2))*60 + value(right(text(Wednesday_Time_In__c),2))))/60),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wednesday Hours worked</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wednesday_Time_In__c</fullName>
        <label>Wednesday Time In</label>
        <picklist>
            <picklistValues>
                <fullName>08:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Wednesday_Time_Out__c</fullName>
        <label>Wednesday Time Out</label>
        <picklist>
            <controllingField>Wednesday_Time_In__c</controllingField>
            <picklistValues>
                <fullName>12:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21:30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Week_beginning__c</fullName>
        <label>Week beginning</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Timesheet</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Employee__c</columns>
        <columns>Week_beginning__c</columns>
        <columns>Total_Hours_worked__c</columns>
        <columns>Time_in_lieu_worked_this_week_in_hours__c</columns>
        <columns>Annual_leave_taken_this_week_in_hours__c</columns>
        <columns>Sick_leave_taken_this_week_in_hours__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TS-{YY}{MM}{000}</displayFormat>
        <label>Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timesheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>